syntax = "proto3";

package userservice;

option go_package = "./;pb";

service UserService {
  rpc GetUserByLogin(GetUserByLoginRequest) returns (GetUserByLoginResponse) {}
}

message GetUserByLoginRequest {
  string login = 1;
}

message GetUserByLoginResponse {
  User result = 1;
}

message User {
  int32 id = 1;
  string login = 2;
  string first_name = 3;
  string last_name = 4;
  bool is_confirmed = 5;
  string password = 6;
}
